# CLabProject

./: CMakeLists.txt  Makefile  README.md  StringProcessing.c  assembler.c  assembler.h  binary.c  binary.h  createFiles.c  createFiles.h  createOutputFiles.c  createOutputFiles.h  directives.c  directives.h  files.c  files.h  firstPass.c  firstPass.h  general.c  general.h  globals.h  instructions.c  instructions.h  labels.c  labels.h  lineHandling.c  lineHandling.h  scratch.c  secondPass.c  secondPass.h  singleLineSecondPass.c  singleLineSecondPass.h  skretch.c  stringProcessing.c  stringProcessing.h  structs.h  tables.c  tables.h  temp.c
testers/: errorTester.as  validTest.as  validTest.ent  validTest.ext  validTest.ob
